# pylight

./: .gitignore  pyproject.toml
src/: __main__.py  core.py  tui.py
