[tool.poetry]
name = "pylight"
version = "0.0.1"
description = ""
authors = ["zpyg <pu.mb@qq.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^10.12.0"
keyboard = "^0.13.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
